update on .env file and README.md

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-clientId = 604833846148-vlc2r6kpgm0l5267e2sosgq1emlu1p4n.apps.googleusercontent.com
+clientId = your clientId
 
-clientSecret = 4rvDBpP4qSMWMt8gAaHVAZH6
+clientSecret = your clientSecret
 
-redirectionUrl = http://localhost:3000/oauth2callback
+redirectionUrl = your clientSecret
